Fixed a bug for which in creating a copy of an existing library the card objects where passed by reference and not by value